<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/post_view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="View Post"/>

    <ScrollView
        android:layout_below="@id/post_view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <ImageView
        android:id="@+id/post_view_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_person"
        android:layout_margin="20dp"
        android:elevation="10dp" />

    <TextView
        android:id="@+id/post_view_post_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/post_title"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:background="@color/colorAccent2"
        android:elevation="15dp"
        android:layout_below="@id/post_view_img"
        android:textSize="25sp"
        android:textColor="#000"
        android:textAllCaps="true"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/post_view_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/post_view_post_title"
        android:background="#FFF"
        android:elevation="15dp"
        android:textAlignment="textEnd"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:hint="@string/price"
        android:textSize="20sp"
        android:textColor="#000"
    tools:ignore="RtlCompat,RtlSymmetry" />

        <TextView
            android:id="@+id/post_view_campus"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:elevation="15dp"
            android:layout_below="@id/post_view_price"
            android:background="#FFF"
            android:hint="@string/preferred_campus"
            android:textAlignment="textEnd"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000"
            tools:ignore="RtlCompat" />


        <TextView
            android:id="@+id/post_view_descriptiontxt"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_below="@id/post_view_price"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent2"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/description"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
        android:id="@+id/post_view_description"
        android:layout_below="@id/post_view_descriptiontxt"
        android:background="#FFF"
        android:elevation="15dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:maxHeight="500dp"
        android:maxLines="8"
        android:hint="@string/description"
        android:padding="10dp"
        android:textSize="25sp"/>

<!--    <RelativeLayout-->
<!--        android:layout_below="@id/post_view_description"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:background="#FFF" >-->

        <TextView
            android:id="@+id/post_view_contacttxt"
            android:layout_below="@id/post_view_description"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorAccent2"
            android:text="Sale Post by"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"/>


        <TextView
            android:id="@+id/post_view_seller_name"
            android:layout_below="@id/post_view_contacttxt"
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            android:layout_height="45dp"
            android:background="#FFF"
            android:elevation="15dp"
            android:hint="@string/name"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000" />
        <TextView
            android:id="@+id/post_view_phone_number"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:elevation="15dp"
            android:layout_below="@id/post_view_seller_name"
            android:background="#FFF"
            android:hint="@string/phone_number"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000" />

        <TextView
            android:id="@+id/post_view_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:elevation="15dp"
            android:layout_below="@id/post_view_phone_number"
            android:background="#FFF"
            android:hint="@string/email_address"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000" />


        <TextView
            android:id="@+id/post_view_other_txt"
            android:layout_below="@id/post_view_email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorAccent2"
            android:text="@string/other_informations"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"/>

        <TextView
        android:id="@+id/post_view_other"
        android:layout_below="@id/post_view_other_txt"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="70dp"
        android:background="#FFF"
        android:elevation="15dp"
        android:hint="@string/other_optional"
        android:gravity="center_vertical"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000" />
    <!--    </RelativeLayout>-->
    </LinearLayout>
    </ScrollView>
</RelativeLayout>