<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/post_image1"
            android:layout_width="115dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_account_circle"
            android:layout_centerVertical="true"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="10dp" />


        <TextView
            android:id="@+id/postID"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginStart="115dp"
            android:padding="10dp"
            android:text="@string/post_title"
            android:textSize="22sp"
            android:textColor="#000"
            android:maxLines="1"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            android:layout_below="@id/postID"
            android:layout_width="320dp"
            android:layout_height="75dp"
            android:layout_marginStart="115dp"
            android:padding="10dp"
            android:hint="@string/description"
            android:maxLines="4"
            android:textColor="#000" />

        <TextView
            android:id="@+id/price"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_below="@id/description"
            android:hint="@string/price"
            android:layout_marginStart="115dp"
            android:paddingEnd="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:textAlignment="textEnd"
            android:gravity="center_vertical"
            tools:ignore="RtlCompat,RtlSymmetry" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

</androidx.cardview.widget.CardView>
