<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">

    <RelativeLayout
        android:id="@+id/post1_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="#202F65">
        <ImageView
            android:id="@+id/post_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tool_bar_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/post1_header"
        android:orientation="vertical"
        android:layout_centerInParent="true" >

        <TextView
            android:id="@+id/txt_post_type_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="97dp"
            android:text="@string/post_option"
            android:gravity="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_WTS_post"
            android:layout_below="@id/txt_post_type_text"
            android:text="@string/want_to_sell"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="97dp"
            android:layout_marginEnd="97dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_WTB_post"
            android:layout_below="@id/btn_WTS_post"
            android:text="@string/want_to_sell"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="97dp"
            android:layout_marginEnd="97dp"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Post"-->
<!--        android:textSize="30sp"-->
<!--        android:layout_centerInParent="true" />-->

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="?attr/colorPrimary"-->
<!--        android:minHeight="?attr/actionBarSize"-->
<!--        android:theme="?attr/actionBarTheme" />-->

</RelativeLayout>